# TabulRAG

./: .gitignore  README.md  evaluate_tables.py  evaluate_tables_new.py  ingest_pdfs.py  parse_qa.py  pyproject.toml  question_answer.csv  rag_agent.py
data/: .env
evaluation_reports/: table_evaluation_20260121_163950.html
parsed_tables/: handbook-of-pharmaceutical-excipients-6th-ed p660_675_p10_t1_LlamaParse.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p11_t1_LlamaParse.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p11_t1_PyMuPDF.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p11_t1_pdfplumber.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p12_t1_LlamaParse.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t1_LlamaParse.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t1_PyMuPDF.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t1_pdfplumber.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t2_LlamaParse.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t2_PyMuPDF.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t2_pdfplumber.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t3_LlamaParse.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t3_PyMuPDF.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t3_pdfplumber.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t4_PyMuPDF.csv  handbook-of-pharmaceutical-excipients-6th-ed p660_675_p13_t4_pdfplumber.csv  (+73 more)
storage_non_tables/: docstore.json  (+2 more)
