[project]
name = "tabulrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "llama-index (>=0.14.12,<0.15.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "marker-pdf (>=1.10.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
